--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "vite": "^5.0.0"
   }
 }
